refactor(RacingGameServiceTest): 테스트코드 가독성 개선